# Morotai

./: Cargo.toml  LICENSE  README.md
src/: create_artifacts.rs  get_ini_section.rs  get_island.rs  main.rs  mk_ini_manager.rs  sign_config_ini.rs  workspace.code-workspace
