[package]
name = "apcert_util"
version = "0.1.0"
authors = ["Rafael Dominguez <rafael.dominguez@microsoft.com>"]
edition = "2018"

[dependencies]
time = "0.3.4"
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.60"
regex = "1.4.2"
error = "0.1.9"
anyhow = "1.0.34"
thread_local = "1.1.4"
